# ofdm-based-systems

./: .gitignore  CUSTOM_CHANNELS.md  IMAGE_ORGANIZATION.md  NORMALIZATION_FIX.md  README.md  REFACTORING_SUMMARY.md  WATERFILLING_IMPLEMENTATION_SUMMARY.md  fixes_for_adaptative.md  plot_constellations.py  pyproject.toml
config/: settings.json  simulation_settings.json  simulation_settings_adaptive.json  simulation_settings_custom_channel.json  simulation_settings_fixed_waterfilling.json  simulation_settings_test.json  simulation_settings_test2.json  simulation_settings_waterfilling.json
config/channel_models/: Lin-Phoong_P1.npy  Lin-Phoong_P2.npy  default_multipath.npy  flat_fading.npy  rayleigh_fading.npy  severe_multipath.npy  two_ray.npy
docs/: OFDM-Based Systems copy.tex  OFDM-Based Systems.tex  WATERFILLING_IMPLEMENTATION_GUIDE.md
docs/diagrams/: ofdm-block-diagram.puml
examples/: adaptive_modulation_demo.py  configurable_simulation_demo.py  custom_channel_demo.py  generate_channel_models.py  overview.py  plot_adaptive_constellation_demo.py  plot_waterfilling_diagram.py  quick_start_adaptive.py  test_new_naming.py  test_new_naming2.py  test_normalization_fix.py  waterfilling_demo.py  waterfilling_noise_bump_experiment.py
notebook/: bit-loading.ipynb
src/ofdm_based_systems/: main.py  main.py.old  update_ber_vs_snr_plot.py
tests/: __init__.py
tests/integration/: INTEGRATION_TEST_REPORT.md  __init__.py  test_adaptive_modulation.py  test_end_to_end.py  test_power_allocation.py
tests/ofdm_based_systems/: __init__.py
(+34 files in other folders)
